--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -9,7 +9,7 @@ tags: [coding, algorithms]
 ---
 #+END_EXPORT
 
-#+STARTUP: showall
+#+STARTUP: showall indent
 #+OPTIONS: tags:nil num:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
 #+TOC: headlines 2
 #+PROPERTY:header-args :results output :exports both :eval no-export
@@ -2733,3 +2733,32 @@ tags: [coding, algorithms]
          test.assert_equals(sorted(get_pins(tup[0])), sorted(
              tup[1]), 'PIN: ' + tup[0])
    #+END_SRC
+
+* #37 First non-repeating character
+
+** Description:
+Write a function named ~first_non_repeating_letter~ that takes a string
+input, and returns the first character that is not repeated anywhere
+in the string.
+
+For example, if given the input 'stress', the function should return
+'t', since the letter t only occurs once in the string, and occurs
+first in the string.  As an added challenge, upper- and lowercase
+letters are considered the same character, but the function should
+return the correct case for the initial letter.
+
+For example, the input 'sTreSS' should return 'T'.  If a string
+contains all repeating characters, it should return an empty string
+("") or None -- see sample tests.
+
+** Solution
+
+#+begin_src python
+  def first_non_repeating_letter(s):
+      # convert the input string
+      pass #your code here
+#+end_src
+
+#+RESULTS:
+
+
