Several clarification about the task

--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -2755,10 +2755,45 @@ contains all repeating characters, it should return an empty string
 
 #+begin_src python
   def first_non_repeating_letter(s):
-      # convert the input string
-      pass #your code here
+      # corner cases first
+      if s == '' or ' ':
+          return ''
+      elif len(set(list(s))) == len(list(s)):  # only unique symbols
+        
+
+
 #+end_src
 
 #+RESULTS:
 
+#+begin_src python
+  import codewars_test as test
+  from solution import first_non_repeating_letter
 
+  @test.describe('Sample Tests')
+  def basic_tests():
+      @test.it('Should handle simple cases')
+      def _():
+          test.assert_equals(first_non_repeating_letter('a'), 'a')
+          test.assert_equals(first_non_repeating_letter('stress'), 't')
+          test.assert_equals(first_non_repeating_letter('moonmen'), 'e')
+
+      @test.it('Should handle empty strings')
+      def _():
+          test.assert_equals(first_non_repeating_letter(''), '')
+
+      @test.it('Should handle strings without unique characters') 
+      def _():
+          test.assert_equals(first_non_repeating_letter('abba'), '')
+          test.assert_equals(first_non_repeating_letter('aa'), '')
+
+      @test.it('Should handle exotic characters')
+      def _():
+          test.assert_equals(first_non_repeating_letter('~><#~><'), '#')
+          test.assert_equals(first_non_repeating_letter('hello world, eh?'), 'w')
+
+      @test.it('Should handle letter case correctly')
+      def _():
+          test.assert_equals(first_non_repeating_letter('sTreSS'), 'T')
+          test.assert_equals(first_non_repeating_letter('Go hang a salami, I\'m a lasagna hog!'), ',')
+#+end_src
